# rvFACE

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  pages.yml
crates/rvface-cli/: Cargo.toml
crates/rvface-cli/benches/: pipeline.rs
crates/rvface-cli/src/: main.rs
crates/rvface-cli/tests/: e2e.rs
crates/rvface-core/: Cargo.toml
crates/rvface-core/src/: align.rs  boxes.rs  image.rs  lib.rs  pose.rs  similarity.rs
crates/rvface-models/: Cargo.toml
crates/rvface-models/src/: detector.rs  embedder.rs  landmark.rs  lib.rs  ops.rs  pipeline.rs  pipnet.rs  pipnet_decode_consts.rs  weights.rs
crates/rvface-models/tests/: parity.rs
crates/rvface-wasm/: Cargo.toml
crates/rvface-wasm/src/: lib.rs
docs/: BENCHMARKS.md
docs/adrs/: 0001-project-scope-and-layout.md  0002-inference-stack-burn.md  0003-models-weights-licensing.md  0004-pipeline-parity-semantics.md  0005-wasm-webui-architecture.md  0006-testing-validation-optimization.md
models/: LICENSES.md  README.md  detector-slim320.manifest.json  embedder-foamliu.manifest.json  embedder-mfn.manifest.json  landmark-mfn68.manifest.json
tools/: .gitignore  README.md  _pipnet_ref.py  common.py  fetch_and_convert.py  gen_fixtures.py  naming.md  requirements.txt
tools/fixtures/: INDEX.json  detector-rand.json  detector-real.json  embedder-foamliu-real.json  embedder-mfn-real.json  irn50-rand.json  landmark-cunjian.json  landmark-cunjian.notes.md  landmark-pipnet-real.json  landmark64-rand.json
web/: .gitignore  build-wasm.sh  check-size.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/models/: detector-slim320.safetensors  embedder-foamliu.safetensors  landmark-pipnet.manifest.json
web/src/: engine-mock.ts  engine-wasm.ts  engine.ts  generated-wasm.d.ts  main.ts  style.css  weights.ts
web/src/ui/: analyze.ts  compare.ts  dropzone.ts  expression.ts  frame.ts  overlay.ts  statusbar.ts  webcam.ts  weights-panel.ts
