[workspace]
members = [
    "crates/rvface-core",
    "crates/rvface-models",
    "crates/rvface-cli",
    "crates/rvface-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ruvnet/metaharness"
authors = ["rUv <ruv@ruv.net>"]

[workspace.dependencies]
rvface-core = { path = "crates/rvface-core" }
rvface-models = { path = "crates/rvface-models" }
burn = { version = "0.18.0", default-features = false, features = ["std", "ndarray"] }
safetensors = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "tiff"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Dedicated profile for wasm artifacts: prioritize size without giving up
# vectorizable inner loops entirely.
[profile.wasm-release]
inherits = "release"
opt-level = 3
panic = "abort"
